@@ -1,3 +1,11 @@
+2002-11-09  David N. Welton  <davidw@dedasys.com>
+
+	* doc/rivet.xml: Make docs reflect behavior of 'var get foobar'
+	when foobar doesn't exist - "" is returned.
+
+	* tests/apachetest/apachetest.tcl: Updates to testing utility
+	procedures.
+
 2002-11-04  David N. Welton  <davidw@dedasys.com>
 
 	* tests/get.test: Backed out changes to 'var get': no longer
